fix review comment

--- a/taskSprint3/Base.lproj/Main.storyboard
+++ b/taskSprint3/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
-                                    <action selector="tapOnButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k0o-Gj-PGB"/>
+                                    <action selector="counterButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nhP-XD-KgZ"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -53,7 +53,7 @@
                     </view>
                     <connections>
                         <outlet property="clickButton" destination="cZl-0a-bQw" id="ZC2-w7-h7R"/>
-                        <outlet property="scoreLable" destination="XAE-qY-7LO" id="DCL-0Y-RLR"/>
+                        <outlet property="scoreLabel" destination="XAE-qY-7LO" id="qaR-39-NxL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
